# waseller-crew

./: .env.example  .env.local  IMPLEMENTACION_MINIMA.md  README.md  pyproject.toml  pyproject.toml.example
.claude/: settings.local.json
docs/: CONTRATO_HTTP_V1_1.md  GUIA_INTEGRACION_WASELLER_MAIN.md  SINCRONIZACION_WASELLER_CREW_TYPESCRIPT.md
docs/integrations/waseller-crew/: README.md
fixtures/: request.example.json  request.mesa_colores.json  request.tenant_runtime_context.v1.json  request.topic_pivot_enriched_stock.json  request.v1_1.example.json
scripts/: smoke-prod.sh
src/crew_shadow_crewai/: __init__.py  __main__.py  auth.py  bootstrap_env.py  constants.py  crew_app.py  draft_variant_guard.py  main.py  models.py  observability.py  openai_env.py  routes.py  tenant_runtime_context.py  text_encoding.py
tenant_prompts/: _global.txt  indumentaria-demo.txt  indumentaria_calzado.txt  muebles_deco.txt  repuestos_lubricentro.txt
tests/: test_api.py
